# LudicIndex

./: README.md  environment.yml  pyproject.toml  requirements.txt
configs/: production_surrogate_template.yaml  reference_demo.yaml
docs/: DIRECTORY_TREE.md  IMPLEMENTATION_EQUATION_MANUSCRIPT_REPORT.md  REFERENCE_INVENTORY.md  RESEARCH_POSITIONING_AND_IMPORTANCE.md  REVIEWER2_DEFENSES.md  SUPER_SIMPLE_EXECUTION_GUIDE.md  SURROGATE_SWAP_GUIDE.md
examples/: demo_run.py  toy_treasure_pomdp.py
examples/demo_outputs/: capability_trends.csv  confound_rates.csv  episodes.csv  paired_tests.csv  pressure_response_glm.csv  pressure_trends.csv  turns.csv  turns.jsonl
examples/demo_outputs/state_bank/: episodes.csv  turns.csv  turns.jsonl
examples/sample_outputs/: capability_trends.csv  confound_rates.csv  episodes.csv  paired_tests.csv  pressure_response_glm.csv  turns.csv  turns.jsonl
ludic_ai/: __init__.py  env.py  evaluation.py  metrics.py  oracle.py  persona.py  records.py  selectors.py  state_bank.py  stats.py  types.py  validator.py
paper/: main.aux  main.out  main.tex  references.bib  reviewer2_hardened_sections.tex
results/reference_outputs/: episodes.csv  paired_tests.csv  turns.csv  turns.jsonl
results/reference_outputs/state_bank/: capability_trends.csv  certification_power.csv  confound_rates.csv  episodes.csv  paired_tests.csv  pressure_response_glm.csv  pressure_trends.csv  turns.csv  (+1 more)
scripts/: diagnose_certification_power.py  plot_publication_figures.py  run_from_config.py  summarize_results.py
surrogates/: README.md
tests/: smoke_test.py
